# quant_asset_manager_v3.2

./: .env  README.md  config.py  pyproject.toml  requirements.txt
analysis/: __init__.py
analysis/metrics/: __init__.py  efficiency_analyzer.py  growth_analyzer.py  liquidity_analyzer.py  portfolio_risk.py  profitability_analyzer.py  relative_valuator.py  stability_analyzer.py  technical_scorer.py  valuation_analyzer.py
app/: __init__.py  cli.py  dashboard.py  quant_system.py
backtesting/: engine.py
backtesting/strategies/: __init__.py  ml_ranking_strategy.py
data/: __init__.py  connectors.py  database.py
ml_models/: __init__.py
ml_models/prediction/: __init__.py  predict_stock_returns.py  predict_timeseries.py  test_predict_stock_returns.py  test_predict_timeseries.py
ml_models/training/: train_ranking_model.py  train_timeseries_model.py
scripts/: __init__.py  extract_text_features.py  generate_quality_benchmark.py  populate_database.py  update_dynamic_peer_groups.py
smartquant.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py
tests/analysis/: __init__.py  test_portfolio_risk.py  test_relative_valuator.py  test_technical_scorer.py
tests/analysis/metrics/: __init__.py  test_efficiency_analyzer.py  test_growth_analyzer.py  test_liquidity_analyzer.py  test_profitability_analyzer.py  test_stability_analyzer.py  test_valuation_analyzer.py
tests/backtesting/: __init__.py  test_engine.py  test_ml_ranking_strategy.py
tests/data/: __init__.py  test_connectors.py
tests/ml_models/: __init__.py
tests/ml_models/training/: __init__.py  (+2 more)
(+3 files in other folders)
